# restix

./: Cargo.toml  docker-compose.yaml
src/: main.rs
src/controllers/: keyboard.rs
src/models/: mod.rs  redis_model.rs
src/services/: redis_service.rs
src/utils/: formatting.rs  layout_ratatui.rs  mod.rs
src/views/: connection_modal.rs  key_info_view.rs  keys_list_view.rs  layout.rs  mod.rs  settings_view.rs  status_view.rs  value_view.rs
