[package]
name = "restix"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
redis = "0.25"        
tokio = { version = "1", features = ["full"] } 
crossterm = "0.27"    
serde = { version = "1", features = ["derive"] } 
serde_json = "1"      
anyhow = "1"          
thiserror = "1"       
chrono = "0.4"        
